// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`charting should match 1`] = `
<div>
  <svg
    class="charting"
    style="width: 100%; height: 100%;"
  >
    <g
      class="charting-group"
      transform="translate(50,50)"
    >
      <div>
        {"top":50,"right":50,"bottom":50,"left":50}
      </div>
      <div>
        {"usableWidth":-100,"usableHeight":-100}
      </div>
      <div>
        [1,2,3]
      </div>
    </g>
  </svg>
</div>
`;

exports[`charting should set state on resize 1`] = `
<div
  style="width: 500px; height: 500px;"
>
  <svg
    class="charting"
    style="width: 100%; height: 100%;"
  >
    <g
      class="charting-group"
      transform="translate(50,50)"
    >
      <div>
        {"top":50,"right":50,"bottom":50,"left":50}
      </div>
      <div>
        {"usableWidth":400,"usableHeight":400}
      </div>
      <div>
        [1,2,3]
      </div>
    </g>
  </svg>
</div>
`;
